methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:1: error: Missing closing brace `}' assumed here
def fig1() {
^PictureMono2:1: error: expected class or object definition
def fig1() {
^PictureMono2:4: error: expected class or object definition
def fig2() {baisseBrosse();leveBrosse(); avance();droite();avance();baisseBrosse();avance();leveBrosse();avance(); droite();avance();baisseBrosse();leveBrosse();avance();droite();avance();baisseBrosse();avance();leveBrosse()}
^PictureMono2:6: error: expected class or object definition
def motifBord() {
^PictureMono2:23: error: expected start of definition
override def run() {
         ^